--- a/.github/workflows/flutter-web-deploy.yml
+++ b/.github/workflows/flutter-web-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       - name: Build web
-        run: flutter build web
+        run: flutter build web --base-href=/To_Do_List-flutter/
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
